<resources>
    <string name="app_name">RumahBatikInventory</string>
    <string name="codeToko">Toko:</string>

    <!--callback-->
    <string name="DATA_NOT_FOUND">Data Not Found</string>


    <!--productAdd-->
    <string name="productCode">Kode Produk</string>
    <string name="productPrice">Kode Harga</string>
    <string name="productQuantity">Quantity Produk</string>
    <string name="productName">Nama Produk</string>
    <string name="productType">Jenis Produk</string>
    <string name="productBahan">Bahan Produk</string>

    <string-array name="spinner_Bahan">
        <item>@string/bahanDolby</item>
        <item>@string/bahanKatun</item>
        <item>@string/bahanViscose</item>
        <item>@string/bahanTenun</item>
        <item>@string/bahanSutra</item>
    </string-array>
    <string name="bahanDolby">Dolby</string>
    <string name="bahanKatun">Katun</string>
    <string name="bahanViscose">Viscose</string>
    <string name="bahanTenun">Tenun</string>
    <string name="bahanSutra">Sutra</string>

    <string-array name="spinner_TipeBaju">
        <item>@string/lenganPanjang</item>
        <item>@string/lenganPendek</item>
    </string-array>
    <string name="lenganPanjang">Lengan Panjang</string>
    <string name="lenganPendek">Lengan Pendek</string>

    <string-array name="spinner_KodeBaju">
        <item>@string/ruh</item>
        <item>@string/uhk</item>
        <item>@string/bkk</item>
    </string-array>
    <string name="ruh">RUH</string>
    <string name="uhk">UHK</string>
    <string name="bkk">BKK</string>

    <!--sales view-->
    <string-array name="spinner_Toko">
        <item>Dalem</item>
        <item>Jembatan</item>
        <item>Atas</item>
        <item>Bawah</item>
    </string-array>
    <string name="dalem">Dalem</string>
    <string name="jembatan">Jembatan</string>
    <string name="atas">Atas</string>
    <string name="bawah">Bawah</string>

    <!--global-->
    <string name="loading">Loading…</string>
    <string name="scan">Scan</string>

</resources>
