<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kevin.rumahbatikinventory.product.productScan"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Cek Produk"
            android:textSize="35dp"/>
        <TextView
            android:id="@+id/productView_qrCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="QRCode"
            android:textSize="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/productCode"
                android:textSize="20dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/productName"
                android:textSize="20dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/productBahan"
                android:textSize="20dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/productType"
                android:textSize="20dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/productQuantity"
                android:textSize="20dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp">
            <TextView
                android:id="@+id/productView_productCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/productCode"
                android:textSize="20dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/productView_productName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/productName"
                android:textSize="20dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/productView_productBahan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/productBahan"
                android:textSize="20dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/productView_productType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/productType"
                android:textSize="20dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/productView_productQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/productQuantity"
                android:textSize="20dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/productView_scanItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="Scan Produk" />
</LinearLayout>